# ari

./: .gitignore  README.md
backend/: .env.example  alembic.ini  requirements.txt
backend/app/: main.py  sync_storage.py
backend/app/agents/: websocket.py
backend/app/ai/: orchestrator.py
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  rate_limit.py  redis.py  security.py  (+1 more)
desktop/: Cargo.toml  Info.plist  tauri.conf.json
desktop/capabilities/: default.json
desktop/examples/: memory_smoke.rs
desktop/src/: lib.rs  main.rs
desktop/src/agent/: client.rs  dispatcher.rs  heartbeat.rs  mod.rs
desktop/src/memory/: client.rs  crypto.rs
desktop/src/permissions/: mod.rs
desktop/src/storage/: mod.rs
desktop/src/tools/: browser.rs  calendar.rs  filesystem.rs  mod.rs  phone.rs  reminders.rs
desktop/ui/: index.html
docs/: README.md  architecture-reference.md  desktop-memory-contract.md  encryption-contract.md  escalation-plan.md  file-thread-storage.md  foundation-closure.md  foundation-flow.md  google-workspace-connections-plan.md  production-staging-runbook.md
infra/docker/: .env.plesk.example  .env.staging.example  Dockerfile.backend  docker-compose.plesk.v1.yml  docker-compose.plesk.yml  docker-compose.staging.yml  docker-compose.yml
mobile/: App.tsx  app.json  package.json
scripts/: deploy_plesk.sh  docx_to_markdown.py  phase1_smoke.py  phase6_recall_smoke.py  sync_content_smoke.py  sync_encryption_smoke.py  sync_key_wrap_smoke.py  sync_recovery_smoke.py  update_architecture_doc_memory.py
shared/tools/: catalog.json
(+94 files in other folders)
