[package]
name = "ai-assistant-desktop"
version = "0.1.0"
description = "AI Assistant desktop agent"
authors = ["AI Assistant contributors"]
edition = "2021"
license = "UNLICENSED"
build = "build.rs"

[lib]
name = "ai_assistant_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "ai-assistant-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
keyring = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
url = "2"
